frontend/src/styles/commandline.scss
#commandLine {
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.75);
  position: fixed;
  left: 0;
  top: 0;
  z-index: 1000;
  display: grid;
  justify-items: center;
  align-items: start;
  padding: 6rem 2rem;
  grid-template-columns: 1fr;
  transition: background 0.125s;
  overflow: hidden;

  .modal {
    max-width: 600px;
    width: 100%;
    background: var(--bg-color);
    border-radius: var(--roundness);
    // outline: 0.25rem solid transparent;
    box-shadow: 0 0 0 0.2em transparent;
    transition: outline 0.125s;
    padding: 0;
    display: block;

    .searchicon {
      color: var(--sub-color);
      margin: 1px 1rem 0 1rem;
    }

    input {
      background: var(--bg-color);
      padding: 1rem 1rem 1rem 0;
      color: var(--text-color);
      border: none;
      outline: none;
      font-size: 1rem;
      width: 100%;
      border-radius: var(--roundness);
      &:focus-visible {
        box-shadow: none;
      }
    }

    .suggestions {
      display: block;
      @extend .ffscroll;
      overflow-y: scroll;
      max-height: calc(100vh - 12rem - 3rem);
      display: grid;
      cursor: pointer;
      -webkit-user-select: none;
      user-select: none;

      .command {
        padding: 0.5rem 1rem;
        font-size: 0.75rem;
        line-height: 0.75rem;
        color: var(--sub-color);
        display: grid;
        grid-template-columns: auto 1fr;

        .chevronIcon {
          margin: 0 0.5rem;
        }

        div {
          pointer-events: none;
        }

        .textIcon {
          font-weight: 900;
          /* width: 1.25rem; */
          display: inline-block;
          letter-spacing: -0.1rem;
          margin-right: 0.5rem;
          text-align: center;
          width: 1.25em;
          color: var(--sub-color);
        }

        .fas {
          margin-right: 0.5rem;
          color: var(--sub-color);
        }

        &:last-child {
          border-radius: 0 0 var(--roundness) var(--roundness);
        }

        &.active {
          color: var(--bg-color) !important;
          background: var(--text-color) !important;
          .fas,
          .far,
          .fab {
            color: var(--bg-color);
          }
        }

        &.withThemeBubbles {
          grid-template-columns: auto 1fr auto;
          .themeBubbles {
            display: grid;
            grid-auto-flow: column;
            gap: 0.5em;
            border-radius: 1em;
            .themeBubble {
              width: 1em;
              height: 1em;
              border-radius: 100%;
            }
          }
        }
      }
    }
  }

  &.noBackground {
    background: none;
    .modal {
      box-shadow: 0 0 0 0.2em var(--sub-alt-color);
      // outline: 0.25rem solid var(--sub-alt-color);
    }
  }
}

